Added cors support. Fix http responses for login endpoint